# hazelsync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/python-poetry/: action.yml
.github/workflows/: package.yaml  tests.yml
backup/: cluster.py  settings.py  utils.py
backup/backend/: __init__.py  local.py  zfs.py
backup/cli/: backup.py  main.py  ssh.py
backup/job/: __init__.py  rsync.py  vault.py
backup/type/: __init__.py  rsync.py
docs/: configuration.md  plugins.md
docs/jobs/: pgsql.md  rsync.md
hazelsync/: cluster.py  metrics.py  plugin.py  reports.py  settings.py  utils.py
hazelsync/backend/: __init__.py  dummy.py  local.py  localfs.py  zfs.py
hazelsync/cli/: __init__.py  backup.py  main.py  nagios.py  restore.py  ssh.py  ssh_helper.py  sshconfig.py  stream.py
hazelsync/job/: pgsql.py  rsync.py  vault.py
hazelsync/ssh/: __init__.py  pgsql.py  rsync.py
hazelsync/ssh_helper/: rsync.py
hazelsync/utils/: functions.py  rsync.py  time.py  zfs.py
tests/: conftest.py  test_cluster.py  test_metrics.py  test_reports.py  test_settings.py  test_utils.py
tests/cli/: test_nagios.py  test_ssh.py
tests/fixtures/: vault.snapshot
tests/fixtures/vault/: SHA256SUMS  meta.json
tests/job/: test_pgsql.py  test_rsync.py  test_vault.py
tests/ssh/: test_pgsql.py  test_rsync.py
tests/type/: test_rsync.py
tests/utils/: test_time.py
