[tool.poetry]
name = "hazelsync"
version = "1.1.0"
description = "Backup system"
authors = ["Guillaume Ludinard <guillaume.ludinard@japannext.co.jp>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.3"
PyYAML = "^6.0"
pathlib = "^1.0.1"
hvac = "^0.11.2"
filelock = "^3.3.1"
click-logging = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
bandit = "^1.7.0"
responses = "^0.14.0"
pytest-spec = "^3.2.0"
pytest-sugar = "^0.9.4"

[tool.poetry.scripts]
hazel = "hazelsync.cli.main:cli"
hazel-ssh = "hazelsync.cli.ssh:ssh"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_modules]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(name)-20s %(levelname)-8s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
